[tool.poetry]
name = "iv-gauge"
version = "0.1.0"
description = "IV Gauge Streamlit app"
authors = ["trbaluv30 <trbaluv30@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
streamlit = "*"
numpy = "*"
pandas = "*"
matplotlib = "*"
yfinance = "0.2.54"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
